Update cover image and fix the image spacing

--- a/pdf/assets/pdf-style.css
+++ b/pdf/assets/pdf-style.css
@@ -659,6 +659,9 @@
 	text-align:center;
 	margin: 5px;
 }
+.markdown-body .image-center {
+	text-align:center;
+}
 .markdown-body .image-name-tag-wrap {
 	text-align:center;
 	padding: 4px 8px;
